<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Market Safe</string>

    <!-- MENU's -->
    <string name="action_update">Actualizar módulo Wifi</string>
    <string name="action_info">Información</string>

    <!-- TOAST's -->
    <string name="tst_scanning" tools:ignore="Typos">Espere un momento… Escaneando</string>
    <string name="locking">Cerrando chapa</string>
    <string name="unlocking">Abriendo chapa</string>
    <string name="success">Configuración exitosa</string>
    <string name="device_successfully_configured">El dispositivo ha sido existosamente configurado</string>
    <string name="card_updated_or_error">Hay un error en la URL, intente nuevamente</string>
    <string name="scan_permissions_cloud">Verificando permisos de conexión</string>
    <string name="request_error">Error en la petición</string>
    <string name="user_not_found">Usuario no encontrado</string>
    <string name="already_session">Ya hay una sesión iniciada</string>
    <string name="internal_server_error">Error interno en el servidor</string>
    <string name="wait_45_secs">Estamos terminando de configurar, ya casi listo</string>
    <string name="wait_20_secs">Estamos en los pasos finales</string>
    <string name="wifi_configuration_running">Hay proceso de configuración en proceso, espera por favor</string>

    <!-- HINT's -->
    <string name="hint_password">Contraseña</string>

    <!-- BUTTON's -->
    <string name="btn_configure">Configurar</string>
    <string name="btn_test">Probar</string>

    <string name="btn_open_lock">Abrir chapa</string>
    <string name="btn_close_lock">Cerrar chapa</string>
    <string name="btn_recharge_fridge">Recargar</string>
    <string name="btn_update">Actualizar</string>


    <!-- TEXT VIEW's -->
    <string name="tv_selected_device_status">Conectando\ndispositivo BLE</string>
    <string name="tv_selected_device_status_connected">Dispositivo BLE\nconectado</string>
    <string name="tv_no_devices">No se encontraron dispositivos cercanos, desliza para volver a intentar</string>
    <string name="tv_scan">Escaneando</string>
    <string name="tv_cir_wireless">CIR Wireless</string>
    <string name="tv_title_access">Access Points</string>
    <string name="wifi">Wi-Fi</string>
    <string name="tv_title_dispositivos">Dispositivo</string>
    <string name="tv_test_mac">00:1B:C5:00:08:11</string>
    <string name="tv_wifi_message">Configura tu conexión wifi.</string>
    <string name="tv_password">Contraseña</string>
    <string name="tv_aceptar">Aceptar</string>
    <string name="tv_cancelar">Cancelar</string>
    <string name="tv_ip">IP</string>
    <string name="tv_dispositivos_ip">10.25.33</string>
    <string name="tv_dispositivos_ssid">SSID</string>
    <string name="tv_password_wifi">Infinitum32145</string>
    <string name="tv_redes_access">Softel CMX</string>
    <string name="tv_sdi_access">RSSI</string>
    <string name="tv_ssdi_number_access">-30</string>
    <string name="tv_ap_access">AP</string>
    <string name="tv_internet_access">INTERNET</string>
    <string name="tv_data_access">DATA</string>
    <string name="tv_status_access">STATUS</string>
    <string name="tv_wifi_nok">No se pudo configurar el Wifi, intente nuevamente</string>
    <string name="tv_wifi_ok">El Wifi se configuró correctamente</string>
    <string name="tv_version">Versión: %s</string>
    <string name="tv_scan_msg">Seleccione el enfriador que desea configurar, asegúrese de estar cerca del dispositivo.</string>

    <!-- CONTENT DESCRIPTION's -->
    <string name="cd_bluetooth_icon">Bluetooth</string>
    <string name="cd_logo_cir_wireless_softel">logo CIR Wireless SOFTEL</string>
    <string name="cd_config_icon">Configuración</string>
    <string name="cd_test_icon">Probar</string>
    <string name="cd_icon_router">Icono Router</string>
    <string name="cd_icon_dispositivos">Dispositivo</string>
    <string name="cd_back_icon">Volver</string>
    <string name="cd_password_icon">Password</string>
    <string name="cd_open_lock">Abre chapa</string>
    <string name="cd_close_lock">Cierra chapa</string>


    <!-- ERROR MESSAGE's -->
    <string name="error_no_communication">Ocurrió un error de comunicación con el dispositivo, intente nuevamente</string>
    <string name="error_no_ap">No se detecta el Access Point</string>
    <string name="error_no_ip">No se ha asignado dirección IP. Revisa la configuración de tu módem</string>
    <string name="error_no_ping">Conectado, pero sin conexión a internet</string>
    <string name="error_no_data">No hay conexión con el servidor de datos, intenta configurar nuevamente</string>
    <string name="error_no_error">Configuración correcta</string>

    <!-- TOAST's -->
    <string name="lock_open">Cerradura abierta</string>
    <string name="lock_close">Cerradura cerrada</string>
    <string name="lock_disabled">Cerradura no habilitada</string>
    <string name="device_connected">Dispositivo conectado</string>
    <string name="configuring_wifi_device">Configurando el WIFI del dispositivo</string>
    <string name="cancelled">Cancelado</string>
    <string name="error_occurred">Ocurrió un error</string>
    <string name="timeout_expired">Tiempo de espera agotado, desconectando</string>
    <string name="unsupported_device">Dispositivo no soportado</string>
    <string name="device_disconnecting">Desconectando el dispositivo</string>
    <string name="wait_moment">Espera un momento</string>
    <string name="reload_enabled">Recarga activada</string>
    <string name="reload_not_available">La recarga no está disponible</string>
    <string name="getting_device_data">Solicitando los datos del dispositivo</string>
    <string name="updating_data">Actualizando datos</string>
    <string name="updated_date">Fecha actualizada</string>
    <string name="error_date">No se ha podido actualizar la fecha</string>
    <string name="unsupported_config_action">Este dispositivo no soporta esta sección</string>


    <!-- POP CONFIG SELECTOR -->
    <string name="select_an_option">Selecciona una opción</string>
    <string name="how_to_configure_ip">¿Cómo deseas configurar la IP?</string>
    <string name="static_ip">IP estatica</string>
    <string name="dynamic_ip">IP dinámica</string>
    <string name="ipv4_address">Dirección IPv4</string>
    <string name="enter_parameters">Ingresa los parametros de configuración</string>
    <string name="example_ipv4">Ejemplo: 192.168.1.100</string>
    <string name="subnetwork_mask">Mascara de subred</string>
    <string name="example_subnetwork_mask">Ejemplo: 255.255.255.0</string>
    <string name="gateway">Puerta de enlace</string>
    <string name="example_gateway">Ejemplo: 192.168.1.1</string>
    <string name="accept">Aceptar</string>
    <string name="invalid_ip_address">La dirección IP no es valida</string>
    <string name="invalid_mask_address">La dirección de subred no es válida</string>
    <string name="invalid_gateway">La dirección de la puerta de enlace no es valida</string>
    <string name="cancel">Cancelar</string>
    <string name="wait_a_moment">Espera por favor</string>
    <string name="error_ocurred">Error en la configuración, intente nuevamenete</string>
    <string name="connection_not_allowed">No tienes permisos para conectarte a este dispositivo</string>
    <string name="type_solkos">Tipo:</string>
    <string name="model_solkos">Model:</string>
    <string name="transmition_solkos">Transmisión:</string>
    <string name="serial_number_solkos">Número de serie:</string>
    <string name="transmitting">Transmitiendo</string>
    <string name="no_transmission">Sin transmisión</string>
    <string name="right_config">Configuración correcta</string>
    <string name="well_configured_message">CIR Wireless está correctamente configurada</string>
    <string name="bad_config">Falla en configuración</string>
    <string name="config_needed">El equipo no transmite datos de manera correcta, en necesario configurarlo</string>
    <string name="config">Configurar</string>
    <string name="ok_wifi">Configuración exitosa</string>
    <string name="nok_wifi">Configuración fallida</string>
    <string name="probe">Probar</string>
    <string name="test_connection">¿Deseas probar la conexión?</string>
    <string name="click_to_probe">Da click para probar la conexión</string>
    <string name="link">Ligar</string>
    <string name="link_device">¿Deseas ligar este dispositivo a tu usuario?</string>
    <string name="link_device_title">Ligar dispositivo</string>
    <string name="link_device_error">No ha sido posible ligar el dispositivo</string>
    <string name="link_device_ok">Dispositivo ligado correctamente, actualiza el escaneo.</string>
    <string name="not_enough_permissions">No cuentas con los permisos necesarios</string>
    <string name="signal_strength">Señal</string>
    <string name="access_points">Modem</string>
    <string name="ip_address">Dirección IP</string>
    <string name="brand">Marca:</string>
    <string name="model_short">Modelo:</string>
    <string name="init_config">Iniciando configuración:</string>
    <string name="reset_wifi">Reiniciando WiFi</string>
    <string name="internal_config">Enviando configuración</string>
    <string name="autconnect">Configurando autoconexión</string>
    <string name="finishing_config">Terminando la configuración</string>
    <string name="excellent">Excelente</string>
    <string name="good">Buena</string>
    <string name="regular">Regular</string>
    <string name="bad">Mala</string>
    <string name="pinging">Haciendo ping</string>
    <string name="getting_ssid">Obteniendo SSID</string>
    <string name="getting_signal_strength">Obteniendo intensidad de señal</string>
    <string name="getting_ip_address">Obteniendo dirección IP</string>
    <string name="yes">Sí</string>
    <string name="no">No</string>
    <string name="cancel_process">Cancelar configuración</string>
    <string name="cancel_process_ask">¿Quieres cancelar el proceso de configuración? </string>
    <string name="process_stopped">Proceso de config. detenido</string>
    <string name="home">Home</string>
    <string name="settings">Ajustes</string>
    <string name="help">Ayuda</string>
    <string name="account">Cuenta</string>
    <string name="contact">Contacto</string>
    <string name="faq">Preguntas frecuentes</string>
    <string name="privacy_policy">Política de privacidad</string>
    <string name="how_to_configure_the_location_of_my_device">¿Cómo configurar la ubicación de mi dispositivo?</string>
    <string name="how_to_connect_my_device_to_the_wifi_network">¿Cómo conectar mi dispositivo a la red WiFi?</string>
    <string name="what_s_a_cooler">¿Qué es un enfriador?</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="status">Estado</string>
    <string name="actions">Actions</string>
    <string name="test">Test</string>
    <string name="close">Cerrar</string>
    <string name="open">Abrir</string>
    <string name="connected">Conectado</string>
    <string name="disconnected">Desconectado</string>
    <string name="update_url">Actualizar firmware</string>
    <string name="no_location_services">La configuración de su ubicación está desactivada. Habilite la ubicación para usar esta aplicación.</string>
    <string name="open_and_close_door">Abra y cierre la puerta del refrigerador para generar nuevos datos a reportar.</string>
    <string name="fail_update_broker">Hubo un problema con la actualización, intente nuevamente.</string>
    <string name="title_reviw">Revisando comunicación.</string>
    <string name="message_report_ok">Equipo reportando.</string>
    <string name="comunication_chek">Verificando la comunicación de la tarjeta, espere…</string>
</resources>
