<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="320dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_vertical"
    android:layout_gravity="center"
    android:background="@drawable/gray_rounded_corners"
    android:orientation="vertical"
    android:paddingStart="@dimen/_16dp"
    android:paddingEnd="@dimen/_16dp"
    android:theme="@style/CustomDialog" >

    <TextView
        android:id="@+id/tvIpConfigTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_parameters"
        android:fontFamily="@font/rubik_bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <TextView
        android:id="@+id/tvIpAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ipv4_address"
        android:layout_marginTop="@dimen/_16dp"
        app:layout_constraintTop_toBottomOf="@+id/tvIpConfigTitle"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etIpAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/example_ipv4"
        app:layout_constraintTop_toBottomOf="@+id/tvIpAddress"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/tvMaskAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subnetwork_mask"
        android:layout_marginTop="@dimen/_16dp"
        app:layout_constraintTop_toBottomOf="@+id/etIpAddress"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etMaskAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/example_subnetwork_mask"
        app:layout_constraintTop_toBottomOf="@+id/tvMaskAddress"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/tvGatewayAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gateway"
        android:layout_marginTop="@dimen/_16dp"
        app:layout_constraintTop_toBottomOf="@+id/etMaskAddress"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etGatewayAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/example_gateway"
        app:layout_constraintTop_toBottomOf="@+id/tvGatewayAddress"
        app:layout_constraintStart_toStartOf="parent" />


    <androidx.cardview.widget.CardView
        android:id="@+id/cvIpConfigParameters"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="@dimen/_16dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:layout_constraintTop_toBottomOf="@+id/etGatewayAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardElevation="@dimen/cv_elevation"
        app:cardCornerRadius="@dimen/cv_corner_radius"
        app:cardUseCompatPadding="true"
        app:cardBackgroundColor="@color/colorPrimary">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/accept"
            android:fontFamily="@font/rubik_light"
            android:textColor="@android:color/white"/>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>