<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray70"
    tools:context=".fragments.HelpMainFragment">

    <TextView
        android:id="@+id/tvSettingsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/help"
        android:textColor="@color/azul40"
        android:fontFamily="@font/rubik_bold"
        android:textSize="@dimen/_25dp"
        android:layout_marginTop="@dimen/_20dp"
        android:layout_marginStart="@dimen/_20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvAppVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/rubik_regular"
        android:layout_marginTop="@dimen/_5dp"
        android:text="Version: 1.0.0"
        app:layout_constraintTop_toBottomOf="@+id/tvSettingsTitle"
        app:layout_constraintStart_toStartOf="@+id/tvSettingsTitle" />

    <TextView
        android:id="@+id/tvFAQ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/rubik_bold"
        android:layout_marginTop="@dimen/_50dp"
        android:textSize="@dimen/_25dp"
        android:textColor="@color/azul40"
        android:text="@string/faq"
        app:layout_constraintTop_toBottomOf="@+id/tvAppVersion"
        app:layout_constraintStart_toStartOf="@+id/tvAppVersion" />

    <TextView
        android:id="@+id/tvWhatsCooler"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/rubik_regular"
        android:layout_marginTop="@dimen/_30dp"
        android:text="@string/what_s_a_cooler"
        android:textColor="@color/azul40"
        android:textSize="@dimen/_15dp"
        app:layout_constraintTop_toBottomOf="@+id/tvFAQ"
        app:layout_constraintStart_toStartOf="@+id/tvFAQ" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1dp"
        android:fontFamily="@font/rubik_regular"
        android:layout_marginTop="@dimen/_5dp"
        android:layout_marginHorizontal="@dimen/_20dp"
        android:background="@color/azul40"
        app:layout_constraintTop_toBottomOf="@+id/tvWhatsCooler"
        app:layout_constraintStart_toStartOf="@+id/tvWhatsCooler" />

    <TextView
        android:id="@+id/tvHowConnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/rubik_regular"
        android:layout_marginTop="@dimen/_30dp"
        android:text="@string/how_to_connect_my_device_to_the_wifi_network"
        android:textColor="@color/azul40"
        android:textSize="@dimen/_15dp"
        app:layout_constraintTop_toBottomOf="@+id/tvWhatsCooler"
        app:layout_constraintStart_toStartOf="@+id/tvWhatsCooler" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1dp"
        android:fontFamily="@font/rubik_regular"
        android:layout_marginTop="@dimen/_5dp"
        android:layout_marginHorizontal="@dimen/_20dp"
        android:background="@color/azul40"
        app:layout_constraintTop_toBottomOf="@+id/tvHowConnect"
        app:layout_constraintStart_toStartOf="@+id/tvHowConnect" />

    <TextView
        android:id="@+id/tvHowConfigure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/rubik_regular"
        android:layout_marginTop="@dimen/_30dp"
        android:text="@string/how_to_configure_the_location_of_my_device"
        android:textColor="@color/azul40"
        android:textSize="@dimen/_15dp"
        app:layout_constraintTop_toBottomOf="@+id/tvHowConnect"
        app:layout_constraintStart_toStartOf="@+id/tvHowConnect" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1dp"
        android:fontFamily="@font/rubik_regular"
        android:layout_marginTop="@dimen/_5dp"
        android:layout_marginHorizontal="@dimen/_20dp"
        android:background="@color/azul40"
        app:layout_constraintTop_toBottomOf="@+id/tvHowConfigure"
        app:layout_constraintStart_toStartOf="@+id/tvHowConfigure" />

    <TextView
        android:id="@+id/tvPrivacyPolicy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/rubik_regular"
        android:layout_marginTop="@dimen/_30dp"
        android:text="@string/privacy_policy"
        android:textColor="@color/azul40"
        android:textSize="@dimen/_15dp"
        app:layout_constraintTop_toBottomOf="@+id/tvHowConfigure"
        app:layout_constraintStart_toStartOf="@+id/tvHowConfigure" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1dp"
        android:fontFamily="@font/rubik_regular"
        android:layout_marginTop="@dimen/_5dp"
        android:layout_marginHorizontal="@dimen/_20dp"
        android:background="@color/azul40"
        app:layout_constraintTop_toBottomOf="@+id/tvPrivacyPolicy"
        app:layout_constraintStart_toStartOf="@+id/tvPrivacyPolicy" />


    <Button
        android:id="@+id/btnContact"
        android:layout_width="@dimen/_150dp"
        android:layout_height="@dimen/_50dp"
        android:layout_marginHorizontal="@dimen/_20dp"
        android:fontFamily="@font/rubik_bold"
        android:text="@string/contact"
        android:textAllCaps="false"
        android:drawableStart="@drawable/ic_headset"
        android:textColor="@color/azul40"
        android:padding="@dimen/_10dp"
        android:background="@drawable/rounded_corners_gray70"
        android:layout_marginBottom="@dimen/_50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>