<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="300dp"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:minWidth="300dp"
    android:minHeight="250dp"
    android:gravity="center_vertical"
    android:layout_gravity="center"
    android:background="@drawable/gray_rounded_corners">


    <!-- Información del error -->
    <TextView
        android:id="@+id/tvCancelProcessMsg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:fontFamily="@font/rubik_regular"
        android:lines="3"
        android:textAlignment="center"
        android:textSize="@dimen/tv_textsize18"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnCancelProcessNegative"
        tools:text="@string/error_no_ip" />


    <Button
        android:id="@+id/btnCancelProcessPositive"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/yes"
        android:padding="@dimen/tv_padding_25"
        android:clickable="true"
        android:focusable="true"
        android:textAlignment="center"
        android:textColor="@color/azul40"
        style="@style/MyButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCancelProcessMsg"/>

    <Button
        android:id="@+id/btnCancelProcessNegative"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/no"
        android:padding="@dimen/tv_padding_25"
        android:clickable="true"
        android:focusable="true"
        android:textAlignment="center"
        android:textColor="@color/azul40"
        style="@style/MyButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvCancelProcessMsg"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>