<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray70"
    tools:context=".fragments.SettingsMainFragment">
    <TextView
        android:id="@+id/tvSettingsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textColor="@color/azul40"
        android:fontFamily="@font/rubik_bold"
        android:textSize="@dimen/_25dp"
        android:layout_marginTop="@dimen/_20dp"
        android:layout_marginStart="@dimen/_20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnUserAccount"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_35dp"
        android:layout_marginTop="@dimen/_20dp"
        android:textAllCaps="false"
        android:text="@string/account"
        android:drawableStart="@drawable/ic_user"
        android:background="@drawable/rounded_corners_gray_70"
        app:layout_constraintTop_toBottomOf="@+id/tvSettingsTitle"
        app:layout_constraintStart_toStartOf="@+id/tvSettingsTitle"/>

    <Button
        android:id="@+id/btnWiFi"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_35dp"
        android:layout_marginTop="@dimen/_20dp"
        android:textAllCaps="false"
        android:text="@string/wifi"
        android:visibility="invisible"
        android:drawableStart="@drawable/ic_wifi"
        android:background="@drawable/rounded_corners_gray_70"
        app:layout_constraintTop_toBottomOf="@+id/btnUserAccount"
        app:layout_constraintStart_toStartOf="@+id/btnUserAccount"/>

    <Button
        android:id="@+id/btnCoolerInfo"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_35dp"
        android:layout_marginTop="@dimen/_20dp"
        android:background="@drawable/rounded_corners_gray_70"
        android:text="@string/cooler"
        android:visibility="invisible"
        android:textAllCaps="false"
        android:drawableStart="@drawable/ic_fridge"
        app:layout_constraintTop_toBottomOf="@+id/btnWiFi"
        app:layout_constraintStart_toStartOf="@+id/btnWiFi"/>

</androidx.constraintlayout.widget.ConstraintLayout>