<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <!-- Background -->
    <include layout="@layout/double_background" />


    <!-- Back Button -->
    <ImageView
        android:id="@+id/ivBackAccess"
        android:layout_width="@dimen/ic_back_size"
        android:layout_height="@dimen/ic_back_size"
        android:layout_margin="@dimen/ic_back_margin"
        android:src="@drawable/ic_back"
        android:contentDescription="@string/cd_back_icon"/>


    <!-- Contenido de la vista -->
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="2" >

        <!-- Título sección -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.4"
            android:weightSum="1"
            android:orientation="vertical"
            android:layout_marginStart="@dimen/cv_margin_access_point"
            android:layout_marginEnd="@dimen/cv_margin_access_point"
            android:layout_marginTop="@dimen/cv_margin_access_point_top">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/cd_icon_router"
                android:layout_weight=".18"
                android:scaleType="fitStart"
                android:paddingStart="@dimen/cv_access_margin_start"
                android:paddingEnd="@dimen/cv_access_margin_end"
                android:src="@drawable/ic_wifi" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/rubik_bold"
                android:text="@string/wifi"
                android:textColor="@color/azul40"
                android:textSize="@dimen/tv_textsize_32"
                android:layout_weight=".22"
                android:layout_marginTop="@dimen/_10dp"
                tools:ignore="UnusedAttribute" />

            <TextView
                android:id="@+id/tvWiFiMessage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/rubik_regular"
                android:layout_weight=".25"
                android:text="@string/tv_wifi_message"
                android:textColor="@color/azul40"
                android:textSize="@dimen/tv_textsize_20" />

            <TextView
                android:id="@+id/tvMacSelectedAccess"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/rubik_regular"
                android:layout_weight="1"
                android:text="@string/tv_test_mac"
                android:textColor="@color/azul40"
                android:textSize="@dimen/tv_textsize_20"
                tools:text="00:1B:C5:86:A6:1B"/>
        </LinearLayout>

        <!-- List -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".7"
            android:orientation="vertical"
            android:layout_marginStart="@dimen/cv_margin_access_point"
            android:layout_marginEnd="@dimen/cv_margin_access_point">

            <!-- CardView Configurar -->
            <androidx.cardview.widget.CardView
                android:id="@+id/cvAccessPoints"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardElevation="@dimen/cv_elevation_access"
                app:cardCornerRadius="@dimen/cv_corner_radius"
                app:cardUseCompatPadding="true"
                app:cardBackgroundColor="@color/cardScanBackground" >

                <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
                    android:id="@+id/srlScanAp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/lvAccessPoints"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        tools:listitem="@layout/scan_wifi_prototype"
                        android:padding="@dimen/cv_margin_access_point" />

                </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </TableLayout>

</RelativeLayout>